--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.0"
   }
