--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
+    "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.2.0",
@@ -29,6 +30,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "validator": "^13.11.0"
   }
 }
