--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Tatiana Katkova",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.6.3",
     "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -27,10 +29,17 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "celebrate": "^15.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-winston": "^4.2.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "winston": "^3.11.0"
   }
 }
